--- a/index.html
+++ b/index.html
@@ -7,13 +7,94 @@
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+        }
+
+        .hero {
+            background: linear-gradient(135deg, #4a90e2, #7c4dff);
+            color: white;
+            padding: 4rem 2rem;
+            text-align: center;
+        }
+
+        .search-bar {
+            max-width: 600px;
+            margin: 2rem auto;
+            padding: 0 1rem;
+        }
+
+        .search-input {
+            width: 100%;
+            padding: 1rem;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            font-size: 1.1rem;
+        }
+
+        .categories {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            padding: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .category-card {
+            background: white;
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+
+        .category-card:hover {
+            transform: translateY(-5px);
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
     <script type="text/babel">
         function App() {
+            const categories = [
+                { name: "Hair & Beauty", icon: "💇‍♀️" },
+                { name: "Wellness & Spa", icon: "💆‍♀️" },
+                { name: "Auto Service", icon: "🚗" },
+                { name: "Health Care", icon: "⚕️" },
+            ];
+
             return (
-                <h1>Hello from UrTimeFlow!</h1>
+                <div>
+                    <section className="hero">
+                        <h1>Welcome to UrTimeFlow</h1>
+                        <p>Your central booking platform for services in Gleisdorf</p>
+                    </section>
+                    
+                    <div className="search-bar">
+                        <input 
+                            type="text" 
+                            className="search-input"
+                            placeholder="Search for services or companies..."
+                        />
+                    </div>
+
+                    <div className="categories">
+                        {categories.map((category, index) => (
+                            <div key={index} className="category-card">
+                                <div style={{ fontSize: '3rem' }}>{category.icon}</div>
+                                <h3>{category.name}</h3>
+                            </div>
+                        ))}
+                    </div>
+                </div>
             );
         }
 
