--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,7 @@
     <header class="bg-white shadow-sm">
         <div class="container mx-auto px-4 py-4 flex flex-col md:flex-row items-center justify-between">
             <div class="flex items-center mb-4 md:mb-0">
-                <img src="public/BigLogoWithName.png" alt="UrTimeFlow Logo" class="h-12 mr-4">
+                <img src="public/BigLogoWithName.png" alt="UrTimeFlow Logo" class="h-16 md:h-20 mr-4">
             </div>
             <h1 class="text-xl md:text-2xl font-bold text-gray-800">UrTimeFlow – Dein zentraler Buchungsplatz in Gleisdorf</h1>
         </div>
@@ -81,8 +81,8 @@
                 <!-- Business Card 1 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="p-4 bg-gray-100">
-                        <div class="w-16 h-16 rounded-full bg-blue-100 flex items-center justify-center mx-auto">
-                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-10">
+                        <div class="w-20 h-20 rounded-full bg-blue-100 flex items-center justify-center mx-auto">
+                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-14">
                         </div>
                     </div>
                     <div class="p-6">
@@ -97,8 +97,8 @@
                 <!-- Business Card 2 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="p-4 bg-gray-100">
-                        <div class="w-16 h-16 rounded-full bg-green-100 flex items-center justify-center mx-auto">
-                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-10">
+                        <div class="w-20 h-20 rounded-full bg-green-100 flex items-center justify-center mx-auto">
+                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-14">
                         </div>
                     </div>
                     <div class="p-6">
@@ -113,8 +113,8 @@
                 <!-- Business Card 3 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="p-4 bg-gray-100">
-                        <div class="w-16 h-16 rounded-full bg-red-100 flex items-center justify-center mx-auto">
-                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-10">
+                        <div class="w-20 h-20 rounded-full bg-red-100 flex items-center justify-center mx-auto">
+                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-14">
                         </div>
                     </div>
                     <div class="p-6">
@@ -129,8 +129,8 @@
                 <!-- Business Card 4 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="p-4 bg-gray-100">
-                        <div class="w-16 h-16 rounded-full bg-purple-100 flex items-center justify-center mx-auto">
-                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-10">
+                        <div class="w-20 h-20 rounded-full bg-purple-100 flex items-center justify-center mx-auto">
+                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-14">
                         </div>
                     </div>
                     <div class="p-6">
@@ -145,8 +145,8 @@
                 <!-- Business Card 5 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="p-4 bg-gray-100">
-                        <div class="w-16 h-16 rounded-full bg-yellow-100 flex items-center justify-center mx-auto">
-                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-10">
+                        <div class="w-20 h-20 rounded-full bg-yellow-100 flex items-center justify-center mx-auto">
+                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-14">
                         </div>
                     </div>
                     <div class="p-6">
@@ -161,8 +161,8 @@
                 <!-- Business Card 6 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="p-4 bg-gray-100">
-                        <div class="w-16 h-16 rounded-full bg-teal-100 flex items-center justify-center mx-auto">
-                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-10">
+                        <div class="w-20 h-20 rounded-full bg-teal-100 flex items-center justify-center mx-auto">
+                            <img src="public/Logo.png" alt="Unternehmenslogo" class="h-14">
                         </div>
                     </div>
                     <div class="p-6">
@@ -182,7 +182,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between">
                 <div class="mb-6 md:mb-0">
-                    <img src="public/Logo.png" alt="UrTimeFlow Logo" class="h-10 mb-4">
+                    <img src="public/Logo.png" alt="UrTimeFlow Logo" class="h-14 mb-4">
                     <p class="text-gray-400">Dein zentraler Buchungsplatz in Gleisdorf</p>
                 </div>
                 
