updatre with cityhair

--- a/test/index.html
+++ b/test/index.html
@@ -81,16 +81,16 @@
                 <!-- Business Card 1 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="p-4 bg-gray-100">
-                        <div class="w-20 h-20 rounded-full bg-blue-100 flex items-center justify-center mx-auto">
-                            <img src="public/Logo2.png" alt="UnternehmensLogo" class="h-14">
+                        <div class="h-24 flex items-center justify-center mx-auto">
+                            <img src="public/CityHairSalon.png" alt="City Hair Salon Logo" class="max-h-20 max-w-full">
                         </div>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Salon Haargenau</h3>
-                        <p class="text-gray-600 mb-4">Professionelle Haarschnitte und Styling für Damen und Herren in gemütlicher Atmosphäre.</p>
-                        <button class="w-full bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 rounded-lg transition-colors duration-300">
+                        <h3 class="text-xl font-semibold mb-2">City Hair Salon Gleisdorf</h3>
+                        <p class="text-gray-600 mb-4">Moderne Haarschnitte, Styling und Farbtechniken für die ganze Familie in entspannter Atmosphäre. Unser Team besteht aus 3 erfahrenen Friseuren.</p>
+                        <a href="friseure.html" class="block w-full bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 text-center rounded-lg transition-colors duration-300">
                             Termin buchen
-                        </button>
+                        </a>
                     </div>
                 </div>
 
