update mit link

--- a/test/friseure.html
+++ b/test/friseure.html
@@ -81,7 +81,7 @@
                         <div class="space-y-3">
                             <p class="text-sm font-medium text-gray-700">Verfügbare Dienstleistungen:</p>
                             
-                            <a href="#" class="block w-full bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 text-center rounded-lg transition-colors duration-300 flex items-center justify-between px-4">
+                            <a href="https://zeeg.me/urtimeflow/City-Hair-Salon-herren-haarschnitt" class="block w-full bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 text-center rounded-lg transition-colors duration-300 flex items-center justify-between px-4">
                                 <span>Herrenschnitt</span>
                                 <span class="bg-blue-400 px-2 py-1 rounded text-xs">ab 25€</span>
                             </a>
